[package]
name = "esp-timer-isr-repro"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/zRedShift/esp-idf-sys", branch = "size_t_as_usize" }
embuild = { git = "https://github.com/zRedShift/embuild", branch = "size_t_as_usize" }

[patch."https://github.com/esp-rs/esp-idf-hal"]
esp-idf-hal = { git = "https://github.com/zRedShift/esp-idf-hal", branch = "size_t_as_usize" }

[patch."https://github.com/esp-rs/esp-idf-svc"]
esp-idf-svc = { git = "https://github.com/zRedShift/esp-idf-svc", branch = "size_t_as_usize" }

[dependencies]
embassy-time = { version = "0.1", git = "https://github.com/ivmarkov/embassy" }
esp-idf-sys = { version = "0.31.10", features = ["binstart"] }
log = "0.4.17"

[dependencies.embedded-svc]
version = "0.23"
git = "https://github.com/esp-rs/embedded-svc"
features = ["nightly", "experimental"]

[dependencies.esp-idf-hal]
version = "0.39"
features = ["edge-executor", "embassy-sync", "critical-section"]
git = "https://github.com/esp-rs/esp-idf-hal"

[dependencies.esp-idf-svc]
version = "0.43"
features = ["nightly", "experimental", "embassy-time-driver", "embassy-time-isr-queue"]
git = "https://github.com/esp-rs/esp-idf-svc"

[build-dependencies]
anyhow = "1.0.65"
embuild = "0.30.4"

[package.metadata.espflash]
partition_table = "partitions.csv"
